--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,3 +1,13 @@
+//Polices
+body, html {
+    font-family: 'Roboto', sans-serif;
+}
+h1, h6 {
+    font-family: 'Shrikhand';
+}
+
+
+
 //Code couleur
 
 $color-primary: #9356DC;
