--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,23 @@
-* {
-    box-sizing: border-box;
-}
-body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    font-size: 1rem;
-     
-}
+/*base*/
+@import "./base/reset";
+@import "./base/typography";
+
+/*compoments*/
+@import "./components/btn-choice";
+@import "./components/btn-explorer";
+@import "./components/btn-heart";
+@import "./components/btn-maps";
+@import "./components/btn-new";
+
+/*layout*/
+@import "./layout/footer";
+@import "./layout/header";
+//pages
+@import "./pages/home";
+@import "./pages/menu";
+
+/*utils*/
+@import "./utils/keyframes";
+@import "./utils/mixins";
+@import "./utils/variables";
+@import "./utils/responsive";
