--- a/sass/main.css
+++ b/sass/main.css
@@ -1,8 +1,41 @@
 /*base*/
-* {
-  box-sizing: border-box;
+/*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
+html,
+body,
+p,
+ol,
+ul,
+li,
+h1,
+h2 {
   margin: 0;
   padding: 0;
+  width: 100%;
+  font-size: 1rem;
+}
+
+h1,
+h2 {
+  font-size: 100%;
+  font-weight: normal;
+}
+
+ul {
+  list-style: none;
+}
+
+button,
+input {
+  margin: 0;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+img {
+  height: auto;
+  max-width: 100%;
 }
 
 /*Polices*/
@@ -17,7 +50,6 @@ h3 {
   color: white;
 }
 
-/*Code couleur*/
 /*compoments*/
 .maps {
   background: #eaeaea;
@@ -69,5 +101,5 @@ header i {
 }
 
 /*utils*/
-
-/*# sourceMappingURL=style.css.map */
+/*Code couleur*/
+/* font */
