--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -1,46 +1,25 @@
-/*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
-// Blocks
-html,
-body,
-p,
-ol,
-ul,
-li,
-h1,
-h2
-{
+
+// Box sizing
+* {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  width: 100%;
-  font-size: 1rem;
-}
-// Headings
-h1,
-h2
-{
-  font-size: 100%;
-  font-weight: normal;
 }
 // List
 ul {
   list-style: none;
 }
-// Form
-button,
-input
- {
-  margin: 0;
-}
-// Box sizing
-* {
-  box-sizing: border-box;
-}
 
 // Media
 img
 {
-  height: auto;
   max-width: 100%;
+  padding: 0;
+}
+a{
+  text-decoration: none;
+  color: black;
+  cursor: pointer;
 }
 
 
