--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -19,12 +19,22 @@ $base-font-size: 16px!default;
 body, html {
     font-family: 'Roboto', sans-serif;
     font-size: 0.9rem;
-    line-height: 2;  
-}
-h3 {
-    font-family: 'Shrikhand';
-    color: white;
-
+    line-height: 1.6rem;  
 }
 
+h1, h2{
+  font-weight: 900;
+  font-size: 1.8rem;
+  padding: 40px;
+}
+
+figcaption, h3 {
+  font-family: 'Roboto';
+  font-size: 1.2rem;
+  font-weight: 300;
+}
+p {
+  font-size: 1.2rem;
+  font-weight: 600;
+}
 
