--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,25 +1,26 @@
-/*utils*/
+
 @import "./utils/keyframes";
 @import "./utils/mixins";
 @import "./utils/variables";
 @import "./utils/breakpoints";
 
-/*base*/
+
 @import "./base/reset";
 @import "./base/typography";
 
-/*compoments*/
 @import "./components/btn-heart";
 @import "./components/btn-new";
 
-/*layout*/
-@import "./layout/footer";
 @import "./layout/header";
-
-
-/*pages*/
-@import "./pages/main";
+@import "./pages/home";
 @import "./pages/menu";
+@import "./layout/footer";
+
+
+
+
+
+
 
 
 
