--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -2,8 +2,10 @@
 
 $color-white:white;
 $color-black:black;
-$color-gris:#363131;
-$shadow-color: #ebd6fa;
+$color-gris:#332f2f;
+$color-gris-medium:#eaeaea;
+$color-gris-light:#f6f6f6;
+$shadow-color: #f7f1fc;
 $color-primary: #9356DC;
 $color-secondary: #FF79DA;
 $color-tertiary: #99E2D0;
@@ -14,4 +16,6 @@ $font-title: 'Shrikhand';
 $font-primary: 'Roberto', sans-serif;
 
 /* Margin */
-$margin: 15px 15px 30px 30px;
+$margin: 25px;
+
+ /* Coeur*/
