--- a/sass/utils/_breakpoints.scss
+++ b/sass/utils/_breakpoints.scss
@@ -1,10 +1,32 @@
 $medium: 768px!default;
 $large: 1000px!default;
+$mobile: 768px; 
+$tablet: 981px;
+$screen: 1200px;
 
 $medium-up: "only screen and (min-width: #{$medium})";
 $medium-down: "only screen and (max-width: #{$medium})";
 $large-up: "only screen and (min-width: #{$large})";
 $large-down: "only screen and (max-width: #{$large})";
+
+// Mobile devices
+@mixin mobile{
+        @media (max-width: #{$mobile}) {
+            @content;
+        }
+}
+// Medium devices
+@mixin tablet {
+        @media (max-width: #{$tablet}) {
+            @content;
+        }
+}
+// Custom devices
+@mixin customDevice($screen) {
+        @media (max-width: $screen+'px' ) {
+           @content;
+        }
+}
 
 $breakpoints: (
         tablet: 768px,
