--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -1,3 +1,4 @@
+// Flexbox
 @mixin flex-config($justify-content: false, $flex: false, $flex-direction: false, $align-items: false) {
     display: flex;
     
@@ -17,7 +18,7 @@
       align-items: $align-items;
     }
   }
-
+// Section action fonctionnement
 @mixin number {
     @include flex-config ($justify-content: center, $align-items: center);
     background: $color-primary;
@@ -29,56 +30,128 @@
     position: relative;
     right: 10px;
 }
-
+//btn Explorer et commander
 @mixin btn__color {
     background:$linear-gradient;
     border-radius: 30px;
-    padding: 20px;
     color: white;
-    width: 230px;  
+    width: 200px;
+    height: 50px;  
     border:none;
     outline: none;
     cursor: pointer;
-    font-size: 1.1rem;
-    font-weight: 500;
-      
+    font-size: 0.9rem;
+    font-weight: 500;   
   }
+// Heart non sectionnner
+@mixin heart {
+  color: rgb(104, 101, 101);
+  font-size: 1.6rem;
+}
+// Heart color hover
+@mixin heart-color {
+  cursor: pointer;
+  animation: heart 2s ease-out;
+  background: linear-gradient($color-secondary, $color-primary);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: bold;   
+}
 
-// card
+// Section card menu
 @mixin btn-card {
   color: #008766;
   background: $color-tertiary;
   border: 5px solid $color-tertiary;
-  border-radius: 5px;
+  border-radius: 2px;
   position: absolute;
-  right: 1%;
+  right: 5%;
   top: 5%;
+  font-weight:bold;
+  font-size: 14px;
+  width: 25%;
+  text-align: center;
 }
 @mixin card {
-  border-radius: 25px;
+  border-radius: 20px;
   box-shadow: 4px 4px 6px #aaa;
-  margin: 20px;
+  margin: 10px;
   position: relative;
   background: #fff;
 }
 @mixin card-img {
   object-fit: cover;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  width: 100%;
+  height: 100%;
+  max-height: 180px;
+}
+@mixin card-figure {
+  margin: 0px;
+}
+@mixin card-figcaption {
+  padding: 10px 15px 15px 15px;
+  
+} 
+// Page Menu
+
+@mixin main-menu {
+  background-color: #f6f6f6;
   border-top-left-radius: 25px;
   border-top-right-radius: 25px;
   width: 100%;
-  height: 100%;
-  max-height: 220px;
+  position: relative;
+  margin-top: -50px;
 }
-@mixin card-figure {
-  margin: 0;
-}
-@mixin card-figcaption {
-  margin: 0;
+@mixin menu-title {
+  font-family: Shrikhand, sans-serif;
+  @include flex-config ($flex: 1, $justify-content: space-between, $align-items: center);
   padding: 10px;
 }
+@mixin meals {
+  background-color: #fff;
+  border-radius: 15px;
+  margin: 10px;
+  padding: 10px;
+  box-shadow: 4px 4px 6px #aaa;
+  position: relative;
+  cursor: pointer;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  transition: padding-right 450ms ease-in-out;
+  &:hover {
+    padding-right: 75px;
+  }
+  &:hover .cross {
+    opacity: 1;
+    transform: translate(-50px);
+  }
+  &:hover .fa-check-circle {
+    transform: rotate(360deg) ;
+  }
+}
 
-
-
+@mixin cross {
+  @include flex-config ($flex: 1, $justify-content: center, $align-items: center);
+  background-color: $color-tertiary;
+  width: 50px;
+  height: 63px;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  position: absolute;
+  padding: 20px;
+  right: -50px;
+  top: 0;
+  opacity: 0;
+  transition: transform 330ms ease-in-out;
+  & .fa-check-circle {
+    color: #fff;
+    transition: transform 500ms ease-in-out;
+  }
+}
 // MediaQuery
 
 @mixin tablet {
@@ -102,4 +175,6 @@
     @content;
   }
 }
+
+
 
