--- a/sass/utils/_breakpoints.scss
+++ b/sass/utils/_breakpoints.scss
@@ -1,36 +1,26 @@
-$medium: 768px!default;
-$large: 1000px!default;
-$mobile: 768px; 
-$tablet: 981px;
-$screen: 1200px;
 
-$medium-up: "only screen and (min-width: #{$medium})";
-$medium-down: "only screen and (max-width: #{$medium})";
-$large-up: "only screen and (min-width: #{$large})";
-$large-down: "only screen and (max-width: #{$large})";
 
-// Mobile devices
-@mixin mobile{
-        @media (max-width: #{$mobile}) {
-            @content;
-        }
-}
-// Medium devices
+
+// MediaQuery
+
 @mixin tablet {
-        @media (max-width: #{$tablet}) {
-            @content;
+        @media screen and (min-width:map-get($breakpoints, tablet)){
+          @content;
         }
-}
-// Custom devices
-@mixin customDevice($screen) {
-        @media (max-width: $screen+'px' ) {
-           @content;
+      }
+@mixin desktop {
+        @media screen and (min-width:map-get($breakpoints, desktop)){
+          @content;
         }
-}
-
-$breakpoints: (
-        tablet: 768px,
-        desktop: 1280px,
-        large: 1600px,
-);
-
+      }
+@mixin large {
+        @media screen and (min-width:map-get($breakpoints, large)){
+          @content;
+        }
+      }
+      
+@mixin medium-screen {
+        @media screen and (min-width: map-get($breakpoints, medium)) {
+          @content;
+        }
+      }
