--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -95,7 +95,7 @@
   padding: 10px 15px 15px 15px;
   
 } 
-// Page Menu
+// Pages Menus
 
 @mixin main-menu {
   background-color: #f6f6f6;
@@ -152,29 +152,7 @@
     transition: transform 500ms ease-in-out;
   }
 }
-// MediaQuery
 
-@mixin tablet {
-  @media screen and (min-width:map-get($breakpoints, tablet)){
-    @content;
-  }
-}
-@mixin desktop {
-  @media screen and (min-width:map-get($breakpoints, desktop)){
-    @content;
-  }
-}
-@mixin large {
-  @media screen and (min-width:map-get($breakpoints, large)){
-    @content;
-  }
-}
-
-@mixin medium-screen {
-  @media screen and (min-width: map-get($breakpoints, medium)) {
-    @content;
-  }
-}
 
 
 
