--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -18,4 +18,9 @@ $font-primary: 'Roberto', sans-serif;
 /* Margin */
 $margin: 25px;
 
- /* Coeur*/
+ /* MediaQuery*/
+ $breakpoints: (
+        tablet: 768px,
+        desktop: 1024px,
+        large: 1400px,
+);
