animation et responsive

--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -13,7 +13,7 @@ $linear-gradient:linear-gradient(to bottom, #ff79da, #e86edb, #cf64dc, #b35cdc, 
 
 /* font */
 $font-title: 'Shrikhand';
-$font-primary: 'Roberto', sans-serif;
+$font-primary: 'Roboto', sans-serif;
 
 /* Margin */
 $margin: 25px;
