--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,14 @@
     opacity: 0;
   }
 }
+@keyframes slidein {
+  from {
+    transform: scaleX(0);
+  }
+  to {
+    transform: scaleX(1);
+  }
+}
 @keyframes defilement {
   0% {
     -webkit-transform: translate(0);
@@ -100,48 +108,53 @@ p {
   font-size: 0.9em;
 }
 
-/* Texte défilant */
 .loader {
   background: -webkit-linear-gradient(#FFFFFF, #99E2D0, #FF79DA, #9356DC);
   width: 100%;
   height: 100%;
   line-height: 100%;
-  font-family: "Shrikhand", sans-serif;
-  font-size: x-large;
-  text-align: center;
   position: fixed;
+  /*page site en arriere plan*/
   z-index: 9999;
   top: 0;
   left: 0;
   pointer-events: none;
-  animation: defilement 10s ease-in-out 3s forwards;
+  animation: defilement 4s ease-in-out 3s forwards;
 }
 
+/* Animation Texte défilant */
 .defilement {
-  overflow: hidden;
-  /* important */
-  width: 80%;
-  height: 40%;
-  /* A ADAPTER */
-  padding: 20px;
-  border: 5px solid #9356DC;
-  box-shadow: 0 0.25em 0.5em #99E2D0, inset 0 0 1em 0.25em #99E2D0;
-}
-
-.defilement p {
-  font-family: "Shrikhand";
+  display: block;
+  margin: 50px auto;
   text-align: center;
+  overflow: hidden;
+  /* important évite débordement*/
 }
-
-.defilement > div {
+.defilement p {
   display: inline-block;
   /* important */
+  animation: defilement 10s;
   white-space: nowrap;
   /* important */
-  animation: defilement 50s infinite linear;
-  /* défilement */
-  cursor: pointer;
-  padding: 10px 2em 10px 100%;
+  font-family: "Shrikhand";
+  font-size: large;
+  line-height: 4rem;
+  margin: 30px;
+}
+.defilement .logo1 img {
+  animation-duration: 750ms slidein;
+  animation: 3s linear 2s slidein;
+  position: relative;
+  width: 40%;
+  opacity: 0.6;
+  /* Firefox, Chrome, Safari, Opera, IE >= 9 (preview) */
+  filter: alpha(opacity=0.6);
+  /* for <= IE 8 */
+}
+@media screen and (min-width: 768px) {
+  .defilement {
+    width: 40%;
+  }
 }
 
 header {
@@ -203,7 +216,7 @@ header .logo {
 }
 .slogan button:hover {
   transform: scale(1.1);
-  opacity: 0.8;
+  opacity: 1;
 }
 
 .action h2 {
