--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,42 +1,45 @@
-/* Texte défilant */
-.loader {
+//Accueil
+.loader {  
     background:-webkit-linear-gradient(#FFFFFF, #99E2D0, #FF79DA, #9356DC);
     width: 100%;
     height: 100%;
     line-height: 100%;
-    font-family: 'Shrikhand', sans-serif;
-    font-size: x-large;
-    text-align: center;
-    position: fixed;
+    position: fixed; /*page site en arriere plan*/
     z-index: 9999;
     top: 0;
     left: 0;
     pointer-events: none;
-    animation: defilement 10s ease-in-out 3s forwards;
+    animation: defilement 4s ease-in-out 3s forwards;  
   }
-  .defilement {
-    overflow: hidden; /* important */
-    width:80%;
-    height: 40%;  /* A ADAPTER */
-    padding: 20px;
-    border: 5px solid $color-primary;
-    box-shadow: 0 .25em .5em $color-tertiary,inset 0 0 1em .25em $color-tertiary;
-  }
-  .defilement p{
-    font-family: 'Shrikhand';
+  /* Animation Texte défilant */
+.defilement {
+    display: block; 
+    margin: 50px auto ;
     text-align: center;
-  }
-  .defilement > div {
-    display: inline-block; /* important */
+    overflow: hidden; /* important évite débordement*/
+  p {
+    display: inline-block;/* important */
+    animation: defilement 10s; 
     white-space: nowrap; /* important */
-    animation: defilement 50s infinite linear; /* défilement */
-    cursor: pointer;
-    padding: 10px 2em 10px 100%;
+    font-family: 'Shrikhand';
+    font-size: large;
+    line-height: 4rem; 
+    margin: 30px;
   }
 
-
-
-
+  .logo1 img{
+    animation-duration: 750ms slidein;
+    animation: 3s linear 2s slidein;
+    position: relative;
+    width: 40%;
+    opacity: 0.6; /* Firefox, Chrome, Safari, Opera, IE >= 9 (preview) */
+    filter:alpha(opacity=0.60); /* for <= IE 8 */ 
+  }
+  @include tablet {
+    width: 40%;
+  } 
+}
+// Page du site
 header {
     width: 100%;
     margin-top: 20px;
@@ -46,6 +49,5 @@ header {
     align-items: center;    
 .logo {   
     height: 1.9rem;
-}
-
+  }
 }
