--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -10,6 +10,10 @@
     opacity: 0;
   }
 }
+@keyframes slidein {
+  from { transform: scaleX(0); }
+  to   { transform: scaleX(1); }
+}
 @keyframes defilement {
   0% {
     -webkit-transform: translate(0);
@@ -20,8 +24,7 @@
     transform: translate(-100%);
   }
 }
-
-//Décalage ouverture menu
+//Décalage ouverture sur page menu
 @keyframes fadein {
   from {
     opacity:0;
@@ -30,7 +33,7 @@
     opacity:1;
   }
 }
-
+ // Colorartion coeur
 @keyframes heart {
     0% {
       opacity: 0;
