--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -28,8 +28,8 @@
   }
 
   .logo1 img{
-    animation-duration: 750ms slidein;
-    animation: 3s linear 2s slidein;
+    animation-duration: 750ms;
+    animation: 3s linear 2s slide-in;
     position: relative;
     width: 40%;
     opacity: 0.6; /* Firefox, Chrome, Safari, Opera, IE >= 9 (preview) */
